[build-system]
requires = ["setuptools"]

[project]
name = "subtomotools"
description = "Some scripts to facilitate subtomogram-averaging workflows."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {email = "b.wimmer@bioc.uzh.ch", name = "Benedikt Wimmer"},
    ]

version = "0.1.1"

dependencies = [
    "click",
    "starfile",
    "mrcfile",
    "numpy",
    "pandas",
    "tqdm"
]

[project.optinal-dependencies]
dev = [
    "ruff",
    ]

[project.urls]
homepage = "https://github.com/tomotools/subtomotools"
repository = "https://github.com/tomotools/subtomotools"

[project.scripts]
project-particles = "subtomotools.particle_operations:project_particles"
apply-selection = "subtomotools.particle_operations:apply_subset"
upgrade-star = "subtomotools.star_operations:upgrade_star"
downgrade-star = "subtomotools.star_operations:downgrade_star"
dedup-3d = "subtomotools.star_operations:dedup_3d"
tomotwin2warp = "subtomotools.tomotwin_export:tomotwin2warp"

[tool.ruff]
# partially copied from github.com/teamtomo/membrain-seg
line-length = 88
target-version = "py38"
extend-select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "I",    # isort
    "U",    # pyupgrade
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D401", # First line should be in imperative mood
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"